<resources>
    <string name="app_name">Pilot Tracking</string>
    <string name="new_entry">New Entry</string>
    <string name="sales_product">Sales Product</string>
    <string name="sales_target">Sales Target</string>
    <string name="target_complete">Target Complete</string>
    <string name="check_in">Check In</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="field_null_error">Field Can not be empty</string>
    <string name="home">Home</string>
    <string name="pending_list">Pending list</string>
    <string name="newEntry">New Entry</string>
    <string name="route_list">Route List</string>
    <string name="logout">Logout</string>
    <string name="your_location">Your Location</string>
    <string name="site_name">Site Name</string>
    <string name="target_meet">Target Meet:</string>
    <string name="delete">Delete</string>
    <string name="location">Location:</string>
    <string name="target">Target:</string>
    <string name="check_prompt">Select One</string>
    <string-array name="Check">
        <item>Check In</item>
        <item>Check Out </item>
    </string-array>
</resources>
