<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/ItemPendingList"
                android:layout_weight="1"
                android:text="@string/sales_product"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvProduct"
                style="@style/ItemPendingList"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/ItemPendingList"
                android:layout_weight="1"
                android:text="@string/site_name"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvSiteName"
                style="@style/ItemPendingList"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/ItemPendingList"
                android:layout_weight="1"
                android:text="@string/sales_target"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvSalesTarget"
                style="@style/ItemPendingList"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/ItemPendingList"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvYourLocation"
                style="@style/ItemPendingList"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/ItemPendingList"
                android:layout_weight="1"
                android:text="@string/target_complete"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etTarget"
                style="@style/ItemPendingList"
                android:layout_weight="2"
                android:hint="@string/target_complete"
                android:inputType="number"
                android:padding="10dp" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btnCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit" />

</LinearLayout>